--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <style type="text/css">
     body {
         padding: 24px 16px;
+        max-width:720px;
+        margin:0 auto;
     }
     </style>
 </head>
@@ -26,15 +28,15 @@
             <a href="https://www.designernews.co/stories/71645-github-now-uses-default-system-font">Github decided to use system fonts</a>
         </li>
         <li>
-            <a href="https://github.com/jonathantneal/system-font-css"> system-font-css ( same idea without apple's new `-apple-system, BlinkMacSystemFont` commands </a>
-        </li>
-        <li>
             <a href="https://github.com/mrmrs/awesome-system-fonts">awesome-system-fonts</a>
         </li>
         <li>
             <a href="https://css-tricks.com/snippets/css/system-font-stack/">System Font Stack</a>
         </li>
     </ul>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
     <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
