--- a/x-pinpad/demo/index.html
+++ b/x-pinpad/demo/index.html
@@ -10,14 +10,17 @@
     <script src="/x-element/src/x-element.js"></script>
     <script src="../x-pinpad.js"></script>
     <link rel="stylesheet" href="../x-pinpad.css">
-    <link rel="stylesheet" href="../fast-font/fast-font.css">
-    <link rel="stylesheet" href="../theme/theme.css">
+    <link rel="stylesheet" href="../../fast-font/fast-font.css">
+    <link rel="stylesheet" href="../../theme/theme.css">
     <script type="text/javascript">
     const $pinpad = new Pinpad();
     </script>
     <style type="text/css">
     body {
         background: var(--primary-background);
+        height: 100vh;
+       /* display: flex;
+        justify-content: center;*/
     }
     </style>
 </body>
