Add shake and correct styles to buttons in mnemonic-validator
Former-commit-id: a580a3f4b64f18a8d49fe6ebdb19abd4730be136

--- a/x-mnemonic-validate/demo/index.html
+++ b/x-mnemonic-validate/demo/index.html
@@ -44,7 +44,7 @@
         $mnemonicValidate.reset();
 
         $mnemonicValidate.addEventListener('validated', () => {
-            console.log('Great! That is correct.');
+            console.log('Event "validated" fired');
         });
     </script>
 
