Refactor x-element source
Former-commit-id: 4cd67f7814601e46c644267f70097ffaa8da85b1

--- a/x-mnemonic-phrase/demo/index.html
+++ b/x-mnemonic-phrase/demo/index.html
@@ -10,7 +10,7 @@
     <x-mnemonic-phrase></x-mnemonic-phrase>
 
     <script src="/mnemonic-phrase/mnemonic-phrase.min.js"></script>
-    <script src="/x-element/src/x-element.js"></script>
+    <script src="/x-element/x-element.js"></script>
     <link rel="stylesheet" href="../../fast-font/fast-font.css">
     <link rel="stylesheet" href="../../theme/theme.css">
 
