--- a/x-mnemonic-validate/demo/index.html
+++ b/x-mnemonic-validate/demo/index.html
@@ -20,7 +20,7 @@
     </x-mnemonic-validate>
 
     <script src="/mnemonic-phrase/mnemonic-phrase.min.js"></script>
-    <script src="/x-element/src/x-element.js"></script>
+    <script src="/x-element/x-element.js"></script>
     <link rel="stylesheet" href="../../fast-font/fast-font.css">
     <link rel="stylesheet" href="../../theme/theme.css">
     <link rel="stylesheet" href="../../inputs/inputs.css">
