--- a/x-pinpad/demo/index.html
+++ b/x-pinpad/demo/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <x-pinpad></x-pinpad>
-    <script src="/x-element/src/x-element.js"></script>
+    <script src="/x-element/x-element.js"></script>
     <script src="../x-pinpad.js"></script>
     <link rel="stylesheet" href="../x-pinpad.css">
     <link rel="stylesheet" href="../../fast-font/fast-font.css">
