--- a/x-wallet-backup/demo/index.html
+++ b/x-wallet-backup/demo/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <x-wallet-backup-import></x-wallet-backup-import>
-    <script src="/x-element/src/x-element.js"></script>
+    <script src="/x-element/x-element.js"></script>
     <script src="../x-wallet-backup-import.js"></script>
     <link rel="stylesheet" type="text/css" href="../x-wallet-backup-import.css">
     <link rel="stylesheet" type="text/css" href="../../fast-font/fast-font.css">
