--- a/x-slider/demo/index.html
+++ b/x-slider/demo/index.html
@@ -17,7 +17,7 @@
     </x-slider>
     <span><a prev><-</a> &nbsp; <a next>-></a></span>
 
-    <script src="/x-element/src/x-element.js"></script>
+    <script src="/x-element/x-element.js"></script>
     <link rel="stylesheet" href="../../fast-font/fast-font.css">
     <link rel="stylesheet" href="../../theme/theme.css">
 
