Refactor x-slider to create its DOM itself
Former-commit-id: 592355f83166cce0aa007c9c8e5de6774c9d008c

--- a/x-mnemonic-validate/demo/index.html
+++ b/x-mnemonic-validate/demo/index.html
@@ -10,13 +10,7 @@
     <x-mnemonic-phrase></x-mnemonic-phrase>
     <h1>Validate your Passphrase</h1>
     <x-mnemonic-validate>
-        <x-slider>
-            <x-slide-container>
-                <x-slide></x-slide>
-                <x-slide></x-slide>
-                <x-slide></x-slide>
-            </x-slide-container>
-        </x-slider>
+        <x-slider slides="3"></x-slider>
     </x-mnemonic-validate>
 
     <script src="/mnemonic-phrase/mnemonic-phrase.min.js"></script>
