Move wallet-backup-import to own folder
Former-commit-id: c02c5351ea934ad2ceb1bf5b8bee08bd437268f8

--- a/x-wallet-backup-import/demo/index.html
+++ b/x-wallet-backup-import/demo/index.html
@@ -6,13 +6,13 @@
 </head>
 
 <body>
-    <x-wallet-backup></x-wallet-backup>
+    <x-wallet-backup-import></x-wallet-backup-import>
     <script src="/x-element/x-element.js"></script>
     <script src="../x-wallet-backup-import.js"></script>
     <link rel="stylesheet" type="text/css" href="../x-wallet-backup-import.css">
     <link rel="stylesheet" type="text/css" href="../../fast-font/fast-font.css">
     <script>
-    const $walletBackup = new XWalletBackup();
+    const $walletImport = new XWalletBackupImport();
     </script>
     <style type="text/css">
     	html,body{
