--- a/x-wallet-backup-import/demo/index.html
+++ b/x-wallet-backup-import/demo/index.html
@@ -8,17 +8,20 @@
 <body>
     <x-wallet-backup-import></x-wallet-backup-import>
     <script src="/x-element/x-element.js"></script>
+    <script src="/qr-scanner/src/qr-scanner-lib.js"></script>
     <script src="../x-wallet-backup-import.js"></script>
     <link rel="stylesheet" type="text/css" href="../x-wallet-backup-import.css">
     <link rel="stylesheet" type="text/css" href="../../fast-font/fast-font.css">
     <script>
     const $walletImport = new XWalletBackupImport();
+    $walletImport.addEventListener('x-wallet-import', e => alert(e.detail));
     </script>
     <style type="text/css">
-    	html,body{
-    		height: 100vh;
-    		width: 100%;
-    	}
+    html,
+    body {
+        height: 100vh;
+        width: 100%;
+    }
     </style>
 </body>
 
