--- a/x-wallet-backup/demo/index.html
+++ b/x-wallet-backup/demo/index.html
@@ -8,17 +8,25 @@
 <body>
     <x-wallet-backup></x-wallet-backup>
     <script src="/x-element/x-element.js"></script>
-    <script src="../x-wallet-backup-import.js"></script>
-    <link rel="stylesheet" type="text/css" href="../x-wallet-backup-import.css">
+    <script src="../x-wallet-backup.js"></script>
+    <script src="/robohash/dist/robohash.min.js"></script>
+    <script src="/x-identicon/src/identicon-factory.js"></script>
+    <script src="/x-identicon/src/identicon-img-factory.js"></script>
+    <script src="/qr-encoder/qr-encoder.min.js"></script>
+    <script src="/wallet-backup/wallet-backup.js"></script>
     <link rel="stylesheet" type="text/css" href="../../fast-font/fast-font.css">
     <script>
+    const address = 'NQ11 CM1M 9LFL 8K8E G3FD AQNF 1J3Q DJXR E735';
+    const privateKey = 'bc6af0c1b72e0a98439769b8570650ae86f6b3f4261b41900ec373e169449139bc6af0c1b72e0a98439769b8570650ae86f6b3f4261b41900ec373e169449139';
     const $walletBackup = new XWalletBackup();
+    $walletBackup.backup(address,privateKey);
     </script>
     <style type="text/css">
-    	html,body{
-    		height: 100vh;
-    		width: 100%;
-    	}
+    html,
+    body {
+        height: 100vh;
+        width: 100%;
+    }
     </style>
 </body>
 
