Use forth slide for success sign in XMnemonicValidate
Former-commit-id: 20bf31040bce24d21ae281f8a91a2c98629ba2f2

--- a/x-mnemonic-validate/demo/index.html
+++ b/x-mnemonic-validate/demo/index.html
@@ -10,7 +10,7 @@
     <x-mnemonic-phrase></x-mnemonic-phrase>
     <h1>Validate your Passphrase</h1>
     <x-mnemonic-validate>
-        <x-slider slides="3"></x-slider>
+        <x-slider slides="4"></x-slider>
     </x-mnemonic-validate>
 
     <script src="/mnemonic-phrase/mnemonic-phrase.min.js"></script>
@@ -24,6 +24,9 @@
 
     <script src="../../x-slider/x-slider.js"></script>
     <link rel="stylesheet" href="../../x-slider/x-slider.css">
+
+    <script src="../../x-success-mark/x-success-mark.js"></script>
+    <link rel="stylesheet" href="../../x-success-mark/x-success-mark.css">
 
     <script src="../x-mnemonic-validate.js"></script>
     <link rel="stylesheet" href="../x-mnemonic-validate.css">
