Add next() link to demo
Former-commit-id: 0adb72b88fa3d6ee624a0f7515a55ed3a31af7e1

--- a/x-mnemonic-validate/demo/index.html
+++ b/x-mnemonic-validate/demo/index.html
@@ -12,6 +12,7 @@
     <x-mnemonic-validate>
         <x-slider slides="4"></x-slider>
     </x-mnemonic-validate>
+    <a>-></a>
 
     <script src="/mnemonic-phrase/mnemonic-phrase.min.js"></script>
     <script src="/x-element/x-element.js"></script>
@@ -42,6 +43,8 @@
         $mnemonicValidate.addEventListener('validated', () => {
             console.log('Event "validated" fired');
         });
+
+        document.querySelector('a').addEventListener('click', () => $mnemonicValidate._next());
     </script>
 
     <style>
