Inline x-mnemonic-validate html
Former-commit-id: 6dd56db6489f7176e1ed61e6e04e7a5e5ea30b51

--- a/x-mnemonic-validate/demo/index.html
+++ b/x-mnemonic-validate/demo/index.html
@@ -9,9 +9,7 @@
 <body>
     <x-mnemonic-phrase></x-mnemonic-phrase>
     <h1>Validate your Passphrase</h1>
-    <x-mnemonic-validate>
-        <x-slider slides="4"></x-slider>
-    </x-mnemonic-validate>
+    <x-mnemonic-validate></x-mnemonic-validate>
     <a>-></a>
 
     <script src="/mnemonic-phrase/mnemonic-phrase.min.js"></script>
