Refactor for XElement update
Former-commit-id: d9e9325a25fe221f95586da6dda8c26b79d501ba

--- a/x-pinpad/demo/index.html
+++ b/x-pinpad/demo/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../../fast-font/fast-font.css">
     <link rel="stylesheet" href="../../theme/theme.css">
     <script type="text/javascript">
-    const $pinpad = new Pinpad();
+    const $pinpad = new XPinpad();
     </script>
     <style type="text/css">
     body {
