--- a/x-mnemonic-validate/demo/index.html
+++ b/x-mnemonic-validate/demo/index.html
@@ -48,7 +48,7 @@
     <style>
         html,
         body {
-            height: 100%;
+            min-height: 100%;
             width: 100%;
             color: white;
             margin: 0;
