--- a/x-wallet-backup-import/demo/index.html
+++ b/x-wallet-backup-import/demo/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <title></title>
-    <link rel="stylesheet" type="text/css" href="../x-wallet-backup-import.css">
-    <link rel="stylesheet" type="text/css" href="../../fast-font/fast-font.css">
-    <link rel="stylesheet" type="text/css" href="../../theme/theme.css">
+    <link href="../../fast-font/fast-font.css" rel="stylesheet">
+    <link href="../../theme/theme.css" rel="stylesheet" type="text/css">
     <script src="/x-element/x-element.js"></script>
-    <script src="/qr-scanner/src/qr-scanner-lib.js"></script>
+    <script src="/qr-scanner/src/qr-scanner.js"></script>
+    <link href="../x-wallet-backup-import.css" rel="stylesheet">
     <script src="../x-wallet-backup-import.js"></script>
-    <style type="text/css">
+    <style>
     html,
     body {
         height: 100vh;
