--- a/fast-font/demo/index.html
+++ b/fast-font/demo/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>fast-font.css</title>
-    <link rel="stylesheet" type="text/css" href="fast-font.css">
+    <link href="fast-font.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <style type="text/css">
     body {
