--- a/x-mnemonic-input/demo/index.html
+++ b/x-mnemonic-input/demo/index.html
@@ -4,15 +4,15 @@
 <head>
     <title>Mnemonic Input</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <script src="/mnemonic-phrase/mnemonic-phrase.min.js"></script>
+    <link href="../../fast-font/fast-font.css" rel="stylesheet">
+    <link href="../../theme/theme.css" rel="stylesheet">
+    <link href="../../inputs/inputs.css" rel="stylesheet">
     <script src="/x-element/x-element.js"></script>
-    <link rel="stylesheet" href="../../fast-font/fast-font.css">
-    <link rel="stylesheet" href="../../theme/theme.css">
-    <link rel="stylesheet" href="../../inputs/inputs.css">
+    <script src="/mnemonic-phrase/mnemonic-phrase.min.js"></script>
     <script src="../../x-mnemonic-phrase/x-mnemonic-phrase.js"></script>
-    <link rel="stylesheet" href="../../x-mnemonic-phrase/x-mnemonic-phrase.css">
+    <link href="../../x-mnemonic-phrase/x-mnemonic-phrase.css" rel="stylesheet">
     <script src="../x-mnemonic-input.js"></script>
-    <link rel="stylesheet" href="../x-mnemonic-input.css">
+    <link href="../x-mnemonic-input.css" rel="stylesheet">
     <style>
     html,
     body {
