--- a/x-mnemonic-phrase/demo/index.html
+++ b/x-mnemonic-phrase/demo/index.html
@@ -4,37 +4,33 @@
 <head>
     <title>Mnemonic Phrase</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <link href="../../fast-font/fast-font.css" rel="stylesheet">
+    <link href="../../theme/theme.css" rel="stylesheet">
+    <script src="/x-element/x-element.js"></script>
+    <script src="/mnemonic-phrase/mnemonic-phrase.min.js"></script>
+    <script src="../x-mnemonic-phrase.js"></script>
+    <link href="../x-mnemonic-phrase.css" rel="stylesheet">
+    <style>
+    html,
+    body {
+        height: 100%;
+        width: 100%;
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: var(--primary-background);
+    }
+    </style>
 </head>
 
 <body>
     <x-mnemonic-phrase></x-mnemonic-phrase>
-
-    <script src="/mnemonic-phrase/mnemonic-phrase.min.js"></script>
-    <script src="/x-element/x-element.js"></script>
-    <link rel="stylesheet" href="../../fast-font/fast-font.css">
-    <link rel="stylesheet" href="../../theme/theme.css">
-
-    <script src="../x-mnemonic-phrase.js"></script>
-    <link rel="stylesheet" href="../x-mnemonic-phrase.css">
-
     <script>
-        const randomKey = window.crypto.getRandomValues(new Uint8Array(32));
-        const $mnemonicPhrase = new XMnemonicPhrase();
-        $mnemonicPhrase.privateKey = MnemonicPhrase._arrayToHex(randomKey);
+    const randomKey = window.crypto.getRandomValues(new Uint8Array(32));
+    const $mnemonicPhrase = new XMnemonicPhrase();
+    $mnemonicPhrase.privateKey = MnemonicPhrase._arrayToHex(randomKey);
     </script>
-
-    <style>
-        html,
-        body {
-            height: 100%;
-            width: 100%;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background: var(--primary-background);
-        }
-    </style>
 </body>
 
 </html>
