--- a/x-pinpad/demo/index.html
+++ b/x-pinpad/demo/index.html
@@ -3,26 +3,26 @@
 
 <head>
     <title>x-pinpad</title>
-</head>
-
-<body>
-    <x-pinpad></x-pinpad>
+    <link href="../../fast-font/fast-font.css" rel="stylesheet">
+    <link href="../../theme/theme.css" rel="stylesheet">
     <script src="/x-element/x-element.js"></script>
+    <link href="../x-pinpad.css" rel="stylesheet">
     <script src="../x-pinpad.js"></script>
-    <link rel="stylesheet" href="../x-pinpad.css">
-    <link rel="stylesheet" href="../../fast-font/fast-font.css">
-    <link rel="stylesheet" href="../../theme/theme.css">
-    <script type="text/javascript">
-    const $pinpad = new XPinpad();
-    </script>
     <style type="text/css">
     body {
         background: var(--primary-background);
         height: 100vh;
-       /* display: flex;
-        justify-content: center;*/
+        display: flex;
+        justify-content: center;
     }
     </style>
+</head>
+
+<body>
+    <x-pinpad></x-pinpad>
+    <script>
+    const $pinpad = new XPinpad();
+    </script>
 </body>
 
 </html>
