Add datalist polyfil for Safari
Former-commit-id: a137a5b55b1f9290bc890725ce2c1c068350206e

--- a/x-mnemonic-input/demo/index.html
+++ b/x-mnemonic-input/demo/index.html
@@ -11,6 +11,7 @@
     <script src="/mnemonic-phrase/mnemonic-phrase.min.js"></script>
     <script src="../../x-mnemonic-phrase/x-mnemonic-phrase.js"></script>
     <link href="../../x-mnemonic-phrase/x-mnemonic-phrase.css" rel="stylesheet">
+    <script src="../datalist-polyfill.min.js"></script>
     <script src="../x-mnemonic-input.js"></script>
     <link href="../x-mnemonic-input.css" rel="stylesheet">
     <style>
