--- a/x-mnemonic-input/demo/index.html
+++ b/x-mnemonic-input/demo/index.html
@@ -11,7 +11,8 @@
     <script src="/mnemonic-phrase/mnemonic-phrase.min.js"></script>
     <script src="../../x-mnemonic-phrase/x-mnemonic-phrase.js"></script>
     <link href="../../x-mnemonic-phrase/x-mnemonic-phrase.css" rel="stylesheet">
-    <script src="../datalist-polyfill.min.js"></script>
+    <script src="../auto-complete.min.js"></script>
+    <link href="../auto-complete.css" rel="stylesheet">
     <script src="../x-mnemonic-input.js"></script>
     <link href="../x-mnemonic-input.css" rel="stylesheet">
     <style>
