Add error and success feedback for a full phrase
Former-commit-id: 005ab44cd660dc507e7822d983965d6986e2278e

--- a/x-mnemonic-input/demo/index.html
+++ b/x-mnemonic-input/demo/index.html
@@ -11,6 +11,8 @@
     <script src="/mnemonic-phrase/mnemonic-phrase.min.js"></script>
     <script src="../../x-mnemonic-phrase/x-mnemonic-phrase.js"></script>
     <link href="../../x-mnemonic-phrase/x-mnemonic-phrase.css" rel="stylesheet">
+    <script src="../../x-success-mark/x-success-mark.js"></script>
+    <link href="../../x-success-mark/x-success-mark.css" rel="stylesheet">
     <script src="../x-mnemonic-input.js"></script>
     <link href="../x-mnemonic-input.css" rel="stylesheet">
     <style>
