--- a/x-qr-scanner/demo/index.html
+++ b/x-qr-scanner/demo/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Nimiq QR Code Scanner</title>
+    <meta name="viewport" content="target-densitydpi=device-dpi,user-scalable=0,minimum-scale=1,maximum-scale=1,initial-scale=1">
     <link href="../../fast-font/fast-font.css" rel="stylesheet">
     <link href="../../theme/theme.css" rel="stylesheet">
     <link href="../../icons/icons.css" rel="stylesheet">
