--- a/x-mnemonic-input/demo/index.html
+++ b/x-mnemonic-input/demo/index.html
@@ -63,7 +63,7 @@
     <p>Press <code>Space</code> or <code>Tab</code> at the end of a word to jump to the next field.</p>
     <x-mnemonic-input></x-mnemonic-input>
     <div>
-        <button id="fill-correctly" class="small">Fill correclty</button>
+        <button id="fill-correctly" class="small">Fill correctly</button>
         <button id="fill-randomly" class="small">Fill randomly</button>
     </div>
     <p>
