Fix demo styling for all browsers and tab completion in Safari
Former-commit-id: 548d491dce40c218bcec10d7079801fc8d6205c5

--- a/x-mnemonic-input/demo/index.html
+++ b/x-mnemonic-input/demo/index.html
@@ -47,7 +47,7 @@
         border-radius: 5px;
     }
 
-    div {
+    .button-row {
         margin-top: 1em;
     }
 
@@ -62,7 +62,7 @@
     <h1>Recover your Private Key</h1>
     <p>Press <code>Space</code> or <code>Tab</code> at the end of a word to jump to the next field.</p>
     <x-mnemonic-input></x-mnemonic-input>
-    <div>
+    <div class="button-row">
         <button id="fill-correctly" class="small">Fill correctly</button>
         <button id="fill-randomly" class="small">Fill randomly</button>
     </div>
