--- a/x-wallet-backup/demo/index.html
+++ b/x-wallet-backup/demo/index.html
@@ -4,13 +4,14 @@
 <head>
     <title></title>
     <script src="/x-element/x-element.js"></script>
-    <script src="../x-wallet-backup.js"></script>
     <script src="/robohash/dist/robohash.min.js"></script>
     <script src="/identicon/src/identicon.js"></script>
     <script src="/identicon/src/identicon-img.js"></script>
     <script src="/qr-encoder/qr-encoder.min.js"></script>
     <script src="/wallet-backup/wallet-backup.js"></script>
-    <link rel="stylesheet" type="text/css" href="../../fast-font/fast-font.css">
+    <script src="../x-wallet-backup.js"></script>
+    <link href="../../fast-font/fast-font.css" rel="stylesheet">
+    <link href="../x-wallet-backup.css" rel="stylesheet">
     <style type="text/css">
     html,
     body {
