--- a/view-backup-phrase/demo/index.html
+++ b/view-backup-phrase/demo/index.html
@@ -13,7 +13,7 @@
     <script src="../../x-mnemonic-phrase/x-mnemonic-phrase.js"></script>
     <link href="../../x-mnemonic-phrase/x-mnemonic-phrase.css" rel="stylesheet">
     <script src="../view-backup-phrase.js"></script>
-    <link href="../view-backup-phrase.css" rel="stylesheet">
+    <!-- <link href="../view-backup-phrase.css" rel="stylesheet"> -->
 </head>
 
 <body>
