use private key instead of key pair for backup
Former-commit-id: e94838bf424eca2b1b2040d48d09fe66e4cf1649

--- a/view-backup-file/demo/index.html
+++ b/view-backup-file/demo/index.html
@@ -38,8 +38,8 @@
         <view-backup-file></view-backup-file>
     </main>
     <script>
-    const address = 'NQ11 CM1M 9LFL 8K8E G3FD AQNF 1J3Q DJXR E735';
-    const privateKey = 'bc6af0c1b72e0a98439769b8570650ae86f6b3f4261b41900ec373e169449139bc6af0c1b72e0a98439769b8570650ae86f6b3f4261b41900ec373e169449139';
+    const address = 'NQ52 R00E 3NKS DXH5 53U3 RK0V S7V4 LEH0 QV64';
+    const privateKey = 'b15560371ce744c3931327205160a68ac46e2cb19bf09ddbd33bfc0292be32ad';
     const $view = new ViewBackupFile();
     $view.backup(address, privateKey);
     </script>
