try to scan qr code at the expected position first
Former-commit-id: 7d9e337e1a34069cf42eee5088e2bec75b6bc1cb

--- a/x-wallet-backup-import/demo/index.html
+++ b/x-wallet-backup-import/demo/index.html
@@ -6,7 +6,8 @@
     <link href="../../fast-font/fast-font.css" rel="stylesheet">
     <link href="../../theme/theme.css" rel="stylesheet" type="text/css">
     <script src="/x-element/x-element.js"></script>
-    <script src="/qr-scanner/src/qr-scanner.js"></script>
+    <script src="/qr-scanner/qr-scanner.min.js"></script>
+    <script src="/wallet-backup/wallet-backup.js"></script>
     <link href="../x-wallet-backup-import.css" rel="stylesheet">
     <script src="../x-wallet-backup-import.js"></script>
     <style>
