--- a/x-mnemonic-validate/demo/index.html
+++ b/x-mnemonic-validate/demo/index.html
@@ -7,6 +7,7 @@
     <link href="../../fast-font/fast-font.css" rel="stylesheet">
     <link href="../../theme/theme.css" rel="stylesheet">
     <link href="../../inputs/inputs.css" rel="stylesheet">
+    <link href="../../typography/typography.css" rel="stylesheet">
     <script src="/x-element/x-element.js"></script>
     <script src="/mnemonic-phrase/mnemonic-phrase.min.js"></script>
     <script src="../../x-mnemonic-phrase/x-mnemonic-phrase.js"></script>
