--- a/view-backup-file-import/demo/index.html
+++ b/view-backup-file-import/demo/index.html
@@ -36,7 +36,7 @@
             if (wallet.pin === '111111') {
                 $view.onSuccess();
             } else {
-                $view.onIncorrectPin();
+                $view.onPinIncorrect();
             }
         }, 3000);
     });
