--- a/view-backup-phrase/demo/index.html
+++ b/view-backup-phrase/demo/index.html
@@ -10,6 +10,10 @@
     <link href="../../app-layout/app-layout.css" rel="stylesheet">
     <script src="/x-element/x-element.js"></script>
     <script src="/mnemonic-phrase/mnemonic-phrase.min.js"></script>
+    <script src="../../x-slides/x-slides.js"></script>
+    <link href="../../x-slides/x-slides.css" rel="stylesheet">
+    <script src="../../x-privacy-agent/x-privacy-agent.js"></script>
+    <link href="../../x-privacy-agent/x-privacy-agent.css" rel="stylesheet">
     <script src="../../x-mnemonic-phrase/x-mnemonic-phrase.js"></script>
     <link href="../../x-mnemonic-phrase/x-mnemonic-phrase.css" rel="stylesheet">
     <script src="../view-backup-phrase.js"></script>
@@ -18,7 +22,7 @@
 
 <body>
     <main>
-    	<view-backup-phrase></view-backup-phrase>
+        <view-backup-phrase></view-backup-phrase>
     </main>
     <script>
     const $view = new ViewBackupPhrase();
