--- a/view-backup-phrase-import/demo/index.html
+++ b/view-backup-phrase-import/demo/index.html
@@ -12,10 +12,14 @@
     <script src="/mnemonic-phrase/mnemonic-phrase.min.js"></script>
     <script src="../../x-success-mark/x-success-mark.js"></script>
     <link href="../../x-success-mark/x-success-mark.css" rel="stylesheet">
+    <script src="../../x-privacy-agent/x-privacy-agent.js"></script>
+    <link href="../../x-privacy-agent/x-privacy-agent.css" rel="stylesheet">
+    <script src="../../x-slides/x-slides.js"></script>
+    <link href="../../x-slides/x-slides.css" rel="stylesheet">
     <script src="../../x-mnemonic-input/autocomplete.js"></script>
     <script src="../../x-mnemonic-input/x-mnemonic-input.js"></script>
     <link href="../../x-mnemonic-input/x-mnemonic-input.css" rel="stylesheet">
-     <script src="../view-backup-phrase-import.js"></script>
+    <script src="../view-backup-phrase-import.js"></script>
     <link href="../view-backup-phrase-import.css" rel="stylesheet">
 </head>
 
