Minor style polishing, cleanup
Former-commit-id: 90022e7b753862a5244f9245b2a98c5f80a693e3

--- a/view-backup-phrase-import/demo/index.html
+++ b/view-backup-phrase-import/demo/index.html
@@ -20,7 +20,7 @@
     <script src="../../x-mnemonic-input/x-mnemonic-input.js"></script>
     <link href="../../x-mnemonic-input/x-mnemonic-input.css" rel="stylesheet">
     <script src="../view-backup-phrase-import.js"></script>
-    <link href="../view-backup-phrase-import.css" rel="stylesheet">
+    <!-- <link href="../view-backup-phrase-import.css" rel="stylesheet"> -->
 </head>
 
 <body>
