Use x-view in all views and cleanup styles
Former-commit-id: 412af76be6d90c0dfadc989abe32ae22f6be1776

--- a/view-backup-file-import/demo/index.html
+++ b/view-backup-file-import/demo/index.html
@@ -11,6 +11,8 @@
     <link href="../../app-layout/app-layout.css" rel="stylesheet">
     <script src="/qr-scanner/src/qr-scanner.js"></script>
     <script src="/x-element/x-element.js"></script>
+    <script src="/x-element/x-view.js"></script>
+    <link href="../../x-view/x-view.css" rel="stylesheet">
     <link href="../../x-slides/x-slides.css" rel="stylesheet">
     <script src="../../x-slides/x-slides.js"></script>
     <link href="../../x-success-mark/x-success-mark.css" rel="stylesheet">
