--- a/view-backup-file/demo/index.html
+++ b/view-backup-file/demo/index.html
@@ -17,6 +17,8 @@
     <script src="/qr-encoder/qr-encoder.min.js"></script>
     <script src="/wallet-backup/wallet-backup.js"></script>
     <script src="/x-element/x-element.js"></script>
+    <script src="/x-element/x-view.js"></script>
+    <link href="../../x-view/x-view.css" rel="stylesheet">
     <script src="../../x-slides/x-slides.js"></script>
     <link href="../../x-slides/x-slides.css" rel="stylesheet">
     <link href="../../x-loading-animation/x-loading-animation.css" rel="stylesheet">
