--- a/view-pin-create/demo/index.html
+++ b/view-pin-create/demo/index.html
@@ -9,6 +9,7 @@
     <link href="../../inputs/inputs.css" rel="stylesheet">
     <link href="../../app-layout/app-layout.css" rel="stylesheet">
     <script src="/x-element/x-element.js"></script>
+    <script src="/x-element/x-view.js"></script>
     <script src="../../x-pinpad/x-pinpad.js"></script>
     <link href="../../x-pinpad/x-pinpad.css" rel="stylesheet">
     <script src="../view-pin-create.js"></script>
@@ -17,7 +18,7 @@
 
 <body class="state-pin-create">
     <main>
-    	<view-pin-create></view-pin-create>
+        <view-pin-create></view-pin-create>
     </main>
     <script>
     const $view = new ViewPinCreate();
