--- a/view-backup-phrase-import/demo/index.html
+++ b/view-backup-phrase-import/demo/index.html
@@ -9,6 +9,8 @@
     <link href="../../inputs/inputs.css" rel="stylesheet">
     <link href="../../app-layout/app-layout.css" rel="stylesheet">
     <script src="/x-element/x-element.js"></script>
+    <script src="/x-element/x-view.js"></script>
+    <link href="../../x-view/x-view.css" rel="stylesheet">
     <script src="/mnemonic-phrase/mnemonic-phrase.min.js"></script>
     <script src="../../x-success-mark/x-success-mark.js"></script>
     <link href="../../x-success-mark/x-success-mark.css" rel="stylesheet">
@@ -18,6 +20,7 @@
     <link href="../../x-slides/x-slides.css" rel="stylesheet">
     <script src="../../x-mnemonic-input/autocomplete.js"></script>
     <script src="../../x-mnemonic-input/x-mnemonic-input.js"></script>
+    <link href="../../x-mnemonic-phrase/x-recovery-phrase.css" rel="stylesheet">
     <link href="../../x-mnemonic-input/x-mnemonic-input.css" rel="stylesheet">
     <script src="../view-backup-phrase-import.js"></script>
     <!-- <link href="../view-backup-phrase-import.css" rel="stylesheet"> -->
