--- a/view-backup-phrase-validate/demo/index.html
+++ b/view-backup-phrase-validate/demo/index.html
@@ -9,6 +9,8 @@
     <link href="../../inputs/inputs.css" rel="stylesheet">
     <link href="../../app-layout/app-layout.css" rel="stylesheet">
     <script src="/x-element/x-element.js"></script>
+    <script src="/x-element/x-view.js"></script>
+    <link href="../../x-view/x-view.css" rel="stylesheet">
     <script src="/mnemonic-phrase/mnemonic-phrase.min.js"></script>
     <script src="../../x-success-mark/x-success-mark.js"></script>
     <link href="../../x-success-mark/x-success-mark.css" rel="stylesheet">
@@ -22,7 +24,7 @@
 
 <body>
     <main>
-    	<view-backup-phrase-validate></view-backup-phrase-validate>
+        <view-backup-phrase-validate></view-backup-phrase-validate>
     </main>
     <script>
     const $view = new ViewBackupPhraseValidate();
