--- a/view-backup-phrase/demo/index.html
+++ b/view-backup-phrase/demo/index.html
@@ -9,6 +9,8 @@
     <link href="../../inputs/inputs.css" rel="stylesheet">
     <link href="../../app-layout/app-layout.css" rel="stylesheet">
     <script src="/x-element/x-element.js"></script>
+    <script src="/x-element/x-view.js"></script>
+    <link href="../../x-view/x-view.css" rel="stylesheet">
     <script src="/mnemonic-phrase/mnemonic-phrase.min.js"></script>
     <script src="../../x-slides/x-slides.js"></script>
     <link href="../../x-slides/x-slides.css" rel="stylesheet">
