--- a/x-mnemonic-phrase/demo/index.html
+++ b/x-mnemonic-phrase/demo/index.html
@@ -9,6 +9,7 @@
     <script src="/x-element/x-element.js"></script>
     <script src="/mnemonic-phrase/mnemonic-phrase.min.js"></script>
     <script src="../x-mnemonic-phrase.js"></script>
+    <link href="../x-recovery-phrase.css" rel="stylesheet">
     <link href="../x-mnemonic-phrase.css" rel="stylesheet">
     <style>
     html,
