Minor style polishing and cleanup
Former-commit-id: 93a71cb1323d4291ee77c4e9db55478569f97b0a

--- a/view-backup-phrase/demo/index.html
+++ b/view-backup-phrase/demo/index.html
@@ -18,6 +18,7 @@
     <link href="../../x-privacy-agent/x-privacy-agent.css" rel="stylesheet">
     <script src="../../x-mnemonic-phrase/x-mnemonic-phrase.js"></script>
     <link href="../../x-mnemonic-phrase/x-mnemonic-phrase.css" rel="stylesheet">
+    <link href="../../x-mnemonic-phrase/x-recovery-phrase.css" rel="stylesheet">
     <script src="../view-backup-phrase.js"></script>
     <!-- <link href="../view-backup-phrase.css" rel="stylesheet"> -->
 </head>
