--- a/x-mnemonic-input/demo/index.html
+++ b/x-mnemonic-input/demo/index.html
@@ -98,6 +98,7 @@
         document.querySelectorAll('button').forEach(button => button.setAttribute('disabled', 'disabled'));
     });
     </script>
+    <link href="../../animations/animations.css" rel="stylesheet">
 </body>
 
 </html>
