--- a/x-mnemonic-validate/demo/index.html
+++ b/x-mnemonic-validate/demo/index.html
@@ -68,6 +68,7 @@
 
     document.querySelector('a').addEventListener('click', () => $mnemonicValidate._next());
     </script>
+    <link href="../../animations/animations.css" rel="stylesheet">
 </body>
 
 </html>
